--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.19",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "firebase": "^10.7.0",
+    "ipfs-http-client": "^60.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
