--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@mui/material": "^5.14.19",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
+    "ethers": "^6.4.0",
     "firebase": "^10.7.0",
     "ipfs-http-client": "^60.0.1",
+    "net": "^1.0.2",
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
@@ -31,5 +32,12 @@
     "hardhat": "^2.19.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false, 
+    "os": false, 
+    "net": false, 
+    "tls": false
   }
 }
