--- a/App/package.json
+++ b/App/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.19",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "ethers": "^6.4.0",
     "firebase": "^10.7.0",
@@ -20,7 +22,7 @@
     "net": "^1.0.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3"
