--- a/App/package.json
+++ b/App/package.json
@@ -27,7 +27,9 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
     "react-router-dom": "^6.20.1",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
